Registration fixes: - Verifier email pattern matching is case insensitive. - Fix for overflow and position.

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -13,7 +13,7 @@ body {
 #main-content {
     box-sizing: border-box;
     background: #fff !important;
-    overflow: hidden;
+    overflow: auto;
     // padding: 40px 120px;
 
     &.minimize {
